Details
Description
Using QtMacExtras from http://qt.gitorious.org/qtplayground/qtmacextras
And trying to implement an unified tool bar on Mac:
#include <QApplication> #include <QMainWindow> #include "qtmacunifiedtoolbar.h" int main(int argc, char *argv[]) { QApplication a(argc, argv); QMainWindow w; // w.setWindowTitle("Title"); QtMacUnifiedToolBar toolBar; toolBar.addAction("First Action"); toolBar.addAction("Second Action"); toolBar.showInWindow(w.windowHandle()); w.show(); return a.exec(); }
The above example crashes if the title is not set on the window.
Adding "setWindowTitle" and the toolbar is shown as expected.