Use safer showInWindowForWidget

widget.windowHandle() will return 0 if the QWindow
has not been created yet. This is also somewhat unpredictable,
calling QWidget::setWindowTitle will create it for
example.

QTBUG-28610

Change-Id: I23f4b1912f551f4ef32da8db47602369ed395d0f
Reviewed-by: Morten Johan Sørvig <morten.sorvig@digia.com>